changes in MyLinkedListQueue